--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
+    "@sweetalert2/theme-bulma": "^3.2.0",
     "babel-loader": "^8.1.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
@@ -24,9 +25,12 @@
     "react-select": "^3.1.0",
     "react-windowed-select": "^2.0.3",
     "styled-components": "^5.1.1",
+    "sweetalert2": "^9.15.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "uuid": "^8.2.0"
+  }
 }
