--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@sweetalert2/theme-bulma": "^3.2.0",
+    "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
@@ -32,6 +33,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
+    "dotenv-webpack": "^2.0.0",
     "uuid": "^8.2.0"
   }
 }
