--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start:dev": "webpack-dev-server"
+    "build": "webpack-dev-server --mode development --open", 
+    "prod_build": "webpack --mode production" 
   },
   "keywords": [],
   "author": "Javier Contreras",
@@ -16,7 +16,6 @@
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
-    "@sweetalert2/theme-bulma": "^3.2.0",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "file-loader": "^6.0.0",
@@ -25,7 +24,6 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
-    "react-windowed-select": "^2.0.3",
     "styled-components": "^5.1.1",
     "sweetalert2": "^9.15.2",
     "webpack": "^4.43.0",
